--- a/src/pages/login/createAccount/createUser.css
+++ b/src/pages/login/createAccount/createUser.css
@@ -1,6 +1,6 @@
 .createAccountBg {
+    margin: auto;
     margin-top: 150px;
-    margin-left: 50px;
     width: 80vw;
     min-height: 60vh;
     padding: 30px;
@@ -10,7 +10,16 @@
     width: 100%;
     margin: auto;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.buttonContainer {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    margin-top: 20px;
 }
 
 .createAccount {
