--- a/src/pages/dashboard/componentsDashboard/modalModifyTables.css
+++ b/src/pages/dashboard/componentsDashboard/modalModifyTables.css
@@ -10,6 +10,29 @@
     display: grid;
 }
 
+.modalTextOnly {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+}
+
+.closeModal {
+    position: relative;
+    height: 200px;
+    background-color: rosybrown;
+}
+
+.closeModal>button {
+    position: absolute;
+    right: 5px;
+}
+
 .modal-content {
     background: white;
     padding: 20px;
@@ -17,4 +40,31 @@
     width: 600px;
     text-align: center;
     display: flex;
+}
+
+.modalContent {
+    margin: auto;
+    margin-top: 150px;
+    background: white;
+    border-radius: 8px;
+    max-width: 400px;
+    max-height: 300px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+
+
+}
+
+.modalContent>h2 {
+    padding: 10px;
+}
+
+.modalText {
+    padding: 10px 30px 10px 30px;
+    text-align: left;
+    width: 100%;
+    max-height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
