--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -7,16 +7,18 @@
 .headerHome,
 .descriptionMain,
 .servicesMain,
+.collageWorks,
 .coursesSectionHome,
 .review {
-
-   min-height: 100vh;
+   height: 100vh;
    width: 100%;
    margin-top: -10px;
+
 }
 
 .servicesMain {
-   height: auto;
+   display: grid;
+   place-items: center;
 }
 
 .headerHome {
