--- a/src/styles/navbarStyle.css
+++ b/src/styles/navbarStyle.css
@@ -21,6 +21,8 @@
     /* Muestra el navbar */
 }
 
+
+
 .navImg {
     width: 60px;
     height: 60px;
@@ -28,4 +30,33 @@
 
 .navbar-brand {
     display: flex;
+}
+
+.showMenu {
+    position: fixed;
+    /* 👈 asegurate de que sea fixed */
+    top: 1rem;
+    /* 👈 distancia desde el borde superior */
+    right: 1rem;
+    height: 50px;
+    width: 50px;
+    z-index: 30;
+    border-radius: 50%;
+    background-color: var(--light-brown) !important;
+    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.8);
+    color: var(--dark-brown) !important;
+    border: none;
+    transition: .6s all ease;
+
+}
+
+.translate-up {
+    margin-top: -80px;
+    pointer-events: none;
+}
+
+.translate-down {
+    margin-top: 0px;
+    /* ajusta según el tamaño del navbar */
+    pointer-events: all;
 }
