--- a/src/components/alerts/CustomAlert.css
+++ b/src/components/alerts/CustomAlert.css
@@ -5,15 +5,26 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
+    color: black;
     border: 1px solid #ccc;
-    padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1080 !important;
     transition: all ease .6s;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .alert-content {
     text-align: center;
+    padding: 20px;
+    min-height: 100px;
+}
+
+.alert-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10px 0px 30px;
 }
 
 /* Estilos para diferentes tipos de alerta */
