--- a/src/pages/courses/coursesStyles/coursesPagetStyle.css
+++ b/src/pages/courses/coursesStyles/coursesPagetStyle.css
@@ -1,3 +1,14 @@
+    .coursesBody {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #f0f0f0;
+    }
+
     .courseSectionTilte {
         margin-top: 60px;
         padding: 30px;
