--- a/src/pages/dashboard/componentsDashboard/modalModifyTables.css
+++ b/src/pages/dashboard/componentsDashboard/modalModifyTables.css
@@ -16,39 +16,43 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
     z-index: 10000;
 }
 
-.closeModal {
+.close-modal {
     position: relative;
-    height: 200px;
-    background-color: rosybrown;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 10px;
+    height: 50px;
+    background-color: rgb(161, 123, 123);
+    box-sizing: border-box;
 }
 
-.closeModal>button {
+.modal-tables-title {
+    margin: 0;
+}
+
+.closeButtonModal {
     position: absolute;
     right: 5px;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    margin-top: 0;
 }
 
-.modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 600px;
-    text-align: center;
-    display: flex;
-}
+
 
 .modalContent {
     margin: auto;
     margin-top: 150px;
-    background: white;
     border-radius: 8px;
-    max-width: 400px;
-    max-height: 300px;
+    max-width: 600px;
+    max-height: 600px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -60,11 +64,59 @@
     padding: 10px;
 }
 
-.modalText {
-    padding: 10px 30px 10px 30px;
-    text-align: left;
-    width: 100%;
-    max-height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
+
+
+.modal-text p {
+    padding: 10px;
+    margin: 0;
+}
+
+/*---------------*/
+.modalModifyContent {
+    margin: auto;
+    font-size: 18px;
+    margin-top: 100px;
+    border-radius: 8px;
+    max-width: 600px;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+
+}
+
+
+
+/* Cuerpo dividido en dos columnas */
+.modalBody {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
+    padding: 20px;
+}
+
+/* Cada grupo de campo */
+.formGroup {
+    display: flex;
+    flex-direction: column;
+}
+
+.formGroup input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    width: 80%;
+}
+
+/* Footer (franja inferior) */
+.modalFooter {
+    padding: 10px;
+    background-color: #1b8d3dad;
+    display: flex;
+    justify-content: center;
+}
+
+label {
+    text-transform: capitalize !important;
 }
