--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -7,8 +7,9 @@
     margin-top: 30px;
     bottom: 0;
     box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.329);
-    background: var(--light-brown);
+    bottom: 0;
     padding: 20px;
+    box-sizing: border-box;
 }
 
 .footerLogo {
