--- a/src/styles/loginStyle.css
+++ b/src/styles/loginStyle.css
@@ -1,14 +1,11 @@
-.loginBg {
-    margin: 20px;
-    padding: 0px 10px 10px 10px;
-}
-
 .login {
+    margin: auto;
     margin-top: 100px;
-}
-
-.loginTitle {
-    padding-top: 15px;
-    font-size: 12px;
-
+    padding: 20px;
+    width: 70%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
 }
