--- a/src/styles/navbarStyle.css
+++ b/src/styles/navbarStyle.css
@@ -1,29 +1,128 @@
 .navbar {
+    position: fixed;
     box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.8);
+    width: 100%;
     height: 80px;
+    top: 0;
     transition: .6s all ease;
-    background-color: var(--light-brown) !important;
+    z-index: 35 !important;
+    margin-top: -80px;
 
 }
+
+
+.navbar-brand {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    text-decoration: none;
+    padding: 0 20px;
+
+}
+
+.navbar-brand h2 {
+    color: var(--pink);
+    margin-left: 10px;
+}
+
+.container-nav {
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+
+
+.nav-menu-button {
+    margin: 0rem 1rem 0rem 0rem;
+}
+
 
 .offcanvas {
-    background-color: var(--light-brown-opacity) !important;
-    backdrop-filter: blur(15px);
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 400px;
+    border-radius: 0;
+    height: 100vh;
+    z-index: 50;
+    transition: opacity 0.4s ease, transform 0.4s ease, visibility 0.4s ease;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(100%);
+
 }
 
-.hidden {
-    margin-top: -80px;
-    /* Oculta el navbar */
+.canvas-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px 0px 20px;
+    height: 50px;
+    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.8);
+}
+
+.nav-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 20px;
+}
+
+.nav-list>li>a {
+    color: var(--pink)
+}
+
+.canvas-body {
+    margin-left: 30px;
+}
+
+
+
+.show-canvas {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+    pointer-events: auto;
+
+}
+
+
+
+.canvas-fade {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--pink-fade);
+    backdrop-filter: blur(10px);
+    z-index: 40;
+    transition: opacity 0.4s ease, visibility 0.4s ease;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.show-fade {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .visible {
     margin-top: 0px;
-    /* Muestra el navbar */
 }
 
 
 
-.navImg {
+.nav-img {
     width: 60px;
     height: 60px;
 }
@@ -32,31 +131,25 @@
     display: flex;
 }
 
-.showMenu {
+.show-menu {
     position: fixed;
-    /* 👈 asegurate de que sea fixed */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
     top: 1rem;
-    /* 👈 distancia desde el borde superior */
-    right: 1rem;
+    right: 2rem;
     height: 50px;
     width: 50px;
     z-index: 30;
     border-radius: 50%;
-    background-color: var(--light-brown) !important;
-    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.8);
-    color: var(--dark-brown) !important;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.8);
     border: none;
-    transition: .6s all ease;
-
+    transition: 0.6s all ease;
 }
 
 .translate-up {
     margin-top: -80px;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
     pointer-events: none;
-}
-
-.translate-down {
-    margin-top: 0px;
-    /* ajusta según el tamaño del navbar */
-    pointer-events: all;
 }
