--- a/src/components/layout/header/navbarStyle.css
+++ b/src/components/layout/header/navbarStyle.css
@@ -15,12 +15,13 @@
     display: flex;
     align-items: center;
     height: 100%;
-    text-decoration: none;
+    color: var(--pink);
     padding: 0 20px;
 
 }
 
-.navbar-brand h2 {
+.nav-title {
+    font-size: 2.5rem !important;
     color: var(--pink);
     margin-left: 10px;
 }
@@ -61,7 +62,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 20px 0px 20px;
-    height: 50px;
+    height: 60px;
     box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.8);
 }
 
@@ -79,8 +80,28 @@
     color: var(--pink)
 }
 
+.nav-link {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    text-decoration: none;
+    color: var(--pink);
+    font-size: 1.2rem;
+    padding: 10px 20px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
 .canvas-body {
     margin-left: 30px;
+}
+
+.canvas-footer {
+    position: absolute;
+    margin-top: 20px;
+    left: 20px;
+    right: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 
