--- a/src/feature/services/turns/modalTurns.css
+++ b/src/feature/services/turns/modalTurns.css
@@ -1,6 +1,9 @@
 /* Estilos para el fondo del modal */
 .fade-modal {
     position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top: 0;
     left: 0;
     right: 0;
@@ -21,10 +24,9 @@
     display: flex;
     box-sizing: border-box;
     flex-direction: column;
-    top: 50%;
-    left: 50%;
+    top: auto;
+    left: auto;
     padding: 10px;
-    transform: translate(-50%, -50%);
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 800px;
