--- a/src/feature/user/dashboard/componentsDashboard/modalModifyTables.css
+++ b/src/feature/user/dashboard/componentsDashboard/modalModifyTables.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     display: grid;
+
 }
 
 .modalTextOnly {
@@ -19,6 +20,7 @@
     justify-content: center;
     align-items: center;
     z-index: 10000;
+
 }
 
 .close-modal {
@@ -56,7 +58,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.712);
 
 }
 
