--- a/src/feature/user/dashboard/dashboardPage.css
+++ b/src/feature/user/dashboard/dashboardPage.css
@@ -12,6 +12,11 @@
     margin: 0;
 }
 
+.dashboard-main {
+    padding: 10px;
+    align-items: center;
+}
+
 .admin-name {
     color: var(--pink);
     margin-bottom: 20px !important;
@@ -26,24 +31,37 @@
     height: 45px;
     padding: 0;
     margin-top: 10px;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+}
+
+.dashboard-form>.custom-select {
+    width: 200px !important;
+    margin: 0 !important;
 }
 
 .dashboard-table {
     margin: 0;
-    padding: 10px;
+    margin-bottom: 10px;
+    padding: 0;
     width: 100%;
     position: relative;
     overflow: auto !important;
     box-sizing: border-box;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.719);
 }
 
 .form-table {
     display: flex;
 }
+
+.table-container {
+    padding: 20px;
+    border-radius: 20px;
+    border: 10px solid black;
+}
+
+
 
 
 .table-custom {
@@ -54,7 +72,7 @@
     letter-spacing: 2PX;
     padding: 5px;
     transition: .6s all ease;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 
 }
 
